--- a/PATCHES/kernel.cfg
+++ b/PATCHES/kernel.cfg
@@ -3,6 +3,10 @@ add {
 }
 
 add {
+  file: "PATCHES/0001-Patch-out-trademark.patch"
+}
+
+add {
   file: "PATCHES/openeladup1.x509"
 }
 
@@ -30,16 +34,16 @@ patch {
 }
 
 spec_change {
-#  append {
-#    field: "Release"
-#    value: ".0.1"
-#  }
-  # All changes done in patch
+  search_and_replace {
+    any: true
+    find: "Patch1000000: 1000-Debrand-specific-Red-Hat-messages.patch"
+    replace: "Patch1000000: 1000-Debrand-specific-Red-Hat-messages.patch\nPatch1000001: 0001-Patch-out-trademark.patch"
+  }
+
   changelog {
     author_name: "Release Engineering"
     author_email: "releng@openela.org"
-    message: "Porting to 9.2, debranding and OpenELA branding with new release pkg (Sherif Nagy)"
-    message: "Porting to 9.2, debranding and OpenELA branding (Louis Abel)"
+    message: "Debranding patches copied from Rocky Linux (Louis Abel and Sherif Nagy from RESF)"
   }
   disable_auto_align: true
 }
