Fix debranding patches

--- a/PATCHES/kernel.cfg
+++ b/PATCHES/kernel.cfg
@@ -30,7 +30,7 @@ replace {
 }
 
 patch {
-  file: "PATCHES/0001-Porting-to-9.2-debranding-and-OpenELA-branding.patch"
+  file: "PATCHES/0001-PATCH-debrand-kernel.patch"
 }
 
 spec_change {
