--- a/PATCHES/kernel.cfg
+++ b/PATCHES/kernel.cfg
@@ -24,36 +24,13 @@ replace {
 }
 
 patch {
-  file: "PATCHES/0001-Porting-to-8.8-debranding-and-OpenELA-branding.patch"
+  file: "PATCHES/0001-Debrand-for-OpenELA-8.patch"
 }
 
 spec_change {
-#  append {
-#    field: "Release"
-#    value: ".0.1"
-#  }
-  search_and_replace {
-    any: true
-    find: "Patch999999: linux-kernel-test.patch"
-    replace: "Patch999999: linux-kernel-test.patch\nPatch1000: 1000-Debrand-specific-Red-Hat-messages.patch\n"
-    n: 1
-  }
-  search_and_replace {
-    any: true
-    find: "ApplyOptionalPatch linux-kernel-test.patch"
-    replace: "ApplyOptionalPatch linux-kernel-test.patch\nApplyOptionalPatch 1000-Debrand-specific-Red-Hat-messages.patch\n"
-    n: 1
-  }
-  # All changes done in patch
   changelog {
     author_name: "Release Engineering"
     author_email: "releng@openela.org"
-    message: "Adding prod certs and changed cert date to 20210620 (Sherif Nagy)"
-    message: "Adding OpenELA secure boot certs (Sherif Nagy)"
-    message: "Fixing vmlinuz removal (Sherif Nagy)"
-    message: "Fixing UEFI CA path (Sherif Nagy)"
-    message: "Porting to 8.8, debranding and OpenELA branding (Louis Abel)"
-    message: "Fixing pesign_key_name values (Sherif Nagy)"
-    message: "Debrand the kernel (Louis Abel)"
+    message: "Debranding and secure boot changes ported from RESF (Sherif Nagy and Louis Abel)"
   }
 }
