Fix certs and remove unnecessary artifacts

--- a/PATCHES/kernel.cfg
+++ b/PATCHES/kernel.cfg
@@ -23,6 +23,42 @@ replace {
   with_file: "PATCHES/x509.genkey"
 }
 
+delete {
+  file: "SOURCES/redhatsecureboot301.cer"
+}
+
+delete {
+  file: "SOURCES/redhatsecureboot501.cer"
+}
+
+delete {
+  file: "SOURCES/redhatsecurebootca3.cer"
+}
+
+delete {
+  file: "SOURCES/redhatsecurebootca5.cer"
+}
+
+delete {
+  file: "SOURCES/redhatsecurebootca7.cer"
+}
+
+delete {
+  file: "SOURCES/secureboot_ppc.cer"
+}
+
+delete {
+  file: "SOURCES/secureboot_s390.cer"
+}
+
+delete {
+  file: "SOURCES/rheldup3.x509"
+}
+
+delete {
+  file: "SOURCES/rhelkpatch1.x509"
+}
+
 patch {
   file: "PATCHES/0001-Debrand-for-OpenELA-8.patch"
 }
