Delete unnecessary artifacts and add dummy ima certs

--- a/PATCHES/kernel.cfg
+++ b/PATCHES/kernel.cfg
@@ -25,6 +25,38 @@ replace {
   with_file: "PATCHES/x509.genkey"
 }
 
+delete {
+  file: "SOURCES/rhelkpatch1.x509"
+}
+
+delete {
+  file: "SOURCES/rhelimaca1.x509"
+}
+
+delete {
+  file: "SOURCES/rhelima_centos.x509"
+}
+
+delete {
+  file: "SOURCES/rhelima_centos.x509"
+}
+
+delete {
+  file: "SOURCES/rhelima.x509"
+}
+
+delete {
+  file: "SOURCES/rheldup3.x509"
+}
+
+delete {
+  file: "SOURCES/uki-sb-cert-x86_64-centos.crt"
+}
+
+delete {
+  file: "SOURCES/uki-sb-cert-x86_64-rhel.crt"
+}
+
 patch {
   file: "PATCHES/0001-Debrand-for-OpenELA.patch"
 }
