Delete unnecessary artifacts

--- a/PATCHES/kernel.cfg
+++ b/PATCHES/kernel.cfg
@@ -21,6 +21,14 @@ replace {
   with_file: "PATCHES/x509.genkey"
 }
 
+delete {
+  file: "SOURCES/rhelkpatch1.x509"
+}
+
+delete {
+  file: "SOURCES/rheldup3.x509"
+}
+
 patch {
   file: "PATCHES/0001-Debrand-for-OpenELA.patch"
 }
