--- a/PATCHES/kernel.cfg
+++ b/PATCHES/kernel.cfg
@@ -10,6 +10,10 @@ add {
   file: "PATCHES/openelakpatch1.x509"
 }
 
+add {
+  file: "PATCHES/debrand-rh-main.patch"
+}
+
 # No replacement necessary, just add it for 9
 replace {
   file: "x509.genkey.rhel"
@@ -26,7 +30,27 @@ delete {
 }
 
 delete {
+  file: "SOURCES/rhelimaca1.x509"
+}
+
+delete {
+  file: "SOURCES/rhelima_centos.x509"
+}
+
+delete {
+  file: "SOURCES/rhelima.x509"
+}
+
+delete {
   file: "SOURCES/rheldup3.x509"
+}
+
+delete {
+  file: "SOURCES/uki-sb-cert-x86_64-centos.crt"
+}
+
+delete {
+  file: "SOURCES/uki-sb-cert-x86_64-rhel.crt"
 }
 
 patch {
